--- a/OsuSkinningTools/OsuSkinningTools.csproj
+++ b/OsuSkinningTools/OsuSkinningTools.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <StartupObject>OsuSkinningTools.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
